<resources>
    <string name="app_name">FloraGo</string>
    <string name="cereus">Цереус</string>
    <string name="cereus_text">Cereus validus,Cereus hildmannianus, Cereus peruvianus,Cereus forbesii spiralis и Cereus azureus.</string>
    <string name="rebutia">Ребуция</string>
    <string name="rebutia_text">Rebutia</string>
    <string name="abutilon">Абутилон</string>
    <string name="abutilon_text">Abutilon</string>
    <string name="aglaonema">Аглаонема</string>
    <string name="aglaonema_text">Aglaonema</string>
    <string name="ardisia">Ардизия</string>
    <string name="ardisia_text">Ardisia</string>
    <string name="begonia">Бегония</string>
    <string name="begonia_text">Begonia</string>
    <string name="dianthus">Гвоздика садовая</string>
    <string name="dianthus_text">Dianthus</string>
    <string name="petunia">Петуния</string>
    <string name="petunia_text">Petunia</string>
    <string name="light">Свет</string>
    <string name="watering">Полив</string>
    <string name="fertilizer">Удобрение</string>
    <string name="transfer">Пересадка</string>
    <string name="cereus_text_light">Цереусы – светолюбивые культуры, поэтому для их расположения лучше выбирать окна, выходящие на юг или юго-восток. Хоть такие растения и предпочитают попадание ультрафиолетовых лучей, весной и летом следует позаботиться об их защите от ожогов.</string>
    <string name="cereus_text_watering">Цереус, как и многие другие растения, нуждается в правильном поливе для поддержания своего здоровья и красоты. Но в отличие от некоторых других растений, цереусу нужна только мягкая вода. Также необходимо следить за температурой воды, чтобы она была умеренно тёплой и не ледяной, поскольку холодная вода может негативно сказаться на корнях растения.</string>
    <string name="cereus_text_fertilizer">Цереусу, как и большинству кактусов, необходимо вносить удобрения для хорошего роста и развития. Рекомендуется подкармливать растение раз в месяц с апреля по июль.</string>
    <string name="cereus_text_transfer">Пересадка цереуса – это важный этап в уходе за растением, который необходимо проводить каждые 1-2 года в зависимости от скорости роста. При пересадке следует выбирать горшок большего диаметра, чтобы обеспечить достаточное пространство для корней.</string>
    <string name="rebutia_text_light">Ребуции не чувствуют себя комфортно в полутени. Лучшим выбором будет размещение их около окон, которые выходят на юго-восток или юго-запад, но они также могут цвести и в условиях окон, ориентированных на восток или запад.</string>
    <string name="rebutia_text_watering">В летнее время обычно достаточно поливать ребуцию раз в 7 дней, но в жаркие дни рекомендуется увеличить частоту поливов. Зимой частота поливов также зависит от температуры воздуха и скорости испарения влаги из почвы.</string>
    <string name="rebutia_text_fertilizer">Подкармливать ребуцию не является обязательным, однако, если вы хотите получить более длительное и обильное цветение, то можно применять специальные сбалансированные удобрения для кактусов и суккулентов. Рекомендуется вносить подкормки раз в месяц с апреля по октябрь.</string>
    <string name="rebutia_text_transfer">Перед пересадкой не следует поливать растение, а земляной ком в горшке должен полностью высохнуть. В новой емкости следует создать хороший слой дренажа.</string>
    <string name="abutilon_text_light">Кустик не пострадает даже при нескольких часах прямого солнечного света. В летнее время рекомендуется переносить кустик на улицу, но следует выбирать защищенное от осадков, порывов ветра и резких изменений освещения место. В противном случае все цветки и листовые пластины могут облететь. В зимнее время цветок требует хорошего освещения, и если необходимо, можно использовать люминесцентную подсветку.</string>
    <string name="abutilon_text_watering">С начала весны и до осени необходимо регулярно и обильно поливать кустарник, а также рекомендуется систематически увлажнять его листву с помощью пульверизатора. Зимой полив проводится только после того, как верхний слой почвы хорошо просохнет. В холодное время года листья поливают из опрыскивателя реже, чем летом.</string>
    <string name="abutilon_text_fertilizer">Во время цветения и активного роста рекомендуется удобрять комнатный клен два раза в месяц, используя органические или минеральные удобрения.</string>
    <string name="abutilon_text_transfer">При выращивании данного кустарника внутри помещений необходимо регулярно пересаживать его. Эту процедуру рекомендуется проводить весной, до начала цветения. Молодые кустарники следует пересаживать ежегодно, а взрослые – раз в 2 или 3 года.</string>
    <string name="aglaonema_text_light">Аглаонема предпочитает расти в затененных местах в дикой природе. Поэтому при выращивании в домашних условиях растение требует полутени. Прямые солнечные лучи могут вызвать ожоги на листьях, поэтому следует избегать их прямого попадания.</string>
    <string name="aglaonema_text_watering">При поливе аглаонемы следует использовать исключительно мягкую воду. Растение поливают обильно сразу после того, как верхний слой субстрата высохнет. Особенно важно регулярно поливать растение в весенне-летний период, когда оно активно растет. В зимнее время полив следует проводить через несколько дней после высыхания верхнего слоя субстрата. Важно помнить, что как пересушка земляного кома, так и застой жидкости в субстрате могут нанести вред аглаонеме.</string>
    <string name="aglaonema_text_fertilizer">В зимний период аглаонеме не требуется подкормка. Однако, с начала весны и до конца лета, растение следует удобрять каждые 2 недели. Для подкормки можно использовать как минеральные удобрения, так и органические.</string>
    <string name="aglaonema_text_transfer">Молодые растения рекомендуется пересаживать ежегодно весной. Взрослые кусты также пересаживаются в весенний период, но с гораздо большим интервалом – примерно раз в 4 или 5 лет.</string>
    <string name="ardisia_text_light">Ардизии, как и другим южным растениям, требуется много солнечного света для успешного развития. Однако постоянное прямое воздействие солнечных лучей может вызвать ожоги на листовых пластинах. Наилучшим вариантом будет размещение горшка с растением на подоконнике восточного окна, чтобы обеспечить оптимальное освещение. Также подойдет южное направление, но в этом случае горшок с растением следует расположить немного удаленным от окна. В зимний период необходимо дополнительно освещать растение фитолампой.</string>
    <string name="ardisia_text_watering">Почва для ардизии всегда должна быть умеренно увлажненной. Летом рекомендуется проводить обильный полив ардизии три раза в неделю, в то время как зимой достаточно поливать ее раз в 2 недели Необходимо избегать избытка влаги, так как это может привести к загниванию корней и появлению плесени в горшке.При поливе предпочтительно использовать теплую отстоянную воду. Излишки воды, скопившиеся в поддоне, следует удалить, чтобы предотвратить застой влаги.</string>
    <string name="ardisia_text_fertilizer">Рекомендуется подкармливать ардизию во время активного роста, который приходится на период с мая по октябрь. Удобрения следует вносить раз в 2-3 недели. Для подкормки можно использовать комплексные минеральные удобрения. Однако рекомендуется снизить дозировку, указанную на упаковке или в инструкции, поскольку избыток питания может нанести вред этому тропическому растению.</string>
    <string name="ardisia_text_transfer">Молодым кустикам ардизии требуется годовая пересадка, в то время как зрелые растения пересаживаются примерно каждые 4,5 года. Процесс пересадки может быть выполнен следующим образом:</string>
    <string name="begonia_text_light">Бегонии являются растениями, которым необходимы короткие дни для нормального развития. В отличие от большинства других разновидностей, которые прекрасно себя чувствуют на северном подоконнике или в полутени в летний период, ампельным сортам требуется больше света. Они могут выдерживать даже некоторое количество прямых солнечных лучей в течение дня, до 11 часов утра или после 15 часов вечера, а не только в ранние утренние часы или вечером.</string>
    <string name="begonia_text_watering">Для ампельных бегоний важно поддерживать постоянно высокую влажность, однако не рекомендуется брызгать надземную часть растения, независимо от наличия бутонов. Чтобы обеспечить необходимую влажность, можно расположить плошки с водой рядом с горшком или поместить мокрую гальку или керамзит в поддон.</string>
    <string name="begonia_text_fertilizer">Для обеспечения длительного и обильного цветения бегонии, с начала весны рекомендуется начинать подкармливать растение. Сначала можно использовать азотные удобрения для стимуляции роста листвы, а после появления первых цветов перейти на комплексные удобрения для цветущих растений.</string>
    <string name="begonia_text_transfer">Клубневым видам ампельной бегонии лучше подходят низкие горшки диаметром 10-15 см. Это способствует более быстрому цветению и уменьшает риск застоя влаги или гниения корней. Кустовые ампельные сорта лучше всего посадить в компактные контейнеры стандартной формы. Если используются большие вазоны, можно посадить несколько черенков, чтобы они быстрее заполнили горшок.</string>
    <string name="dianthus_text_light">Гвоздика садовая нуждается в полном солнце каждый день, и этим растениям требуется минимум шесть часов солнечного света, чтобы поддерживать листья, корни и цветение в здоровом состоянии. Даже если большинству многолетних растений требуется шесть часов солнечного света в день, такие растения, как оранжевая дневная лилия или гигантский кореопсис, могут жить при меньшем количестве солнца - не менее трех часов ежедневно.</string>
    <string name="dianthus_text_watering">Цветы растут практически сами по себе. После того как они прижились, нужен лишь периодический полив. Многолетние виды  отличаются высокой засухоустойчивостью. В средней полосе взрослые растения можно вовсе не поливать, им достаточно естественных осадков. В южных регионах цветок поливают по мере необходимости, раз в неделю, не чаще.</string>
    <string name="dianthus_text_fertilizer">Многолетняя гвоздика нетребовательна к питанию. Как правило, её подкармливают 2 раза за сезон: перед началом цветения и после его окончания и обрезки цветоносов. Первая подкормка способствует формированию большого количества бутонов и обеспечивает яркую окраску лепестков. Вторая подкормка нужна для того, чтобы растения восстановили силы после цветения и нарастили зелёную массу после обрезки. Для подкормки можно использовать любое цветочное удобрение с высоким содержанием фосфора и калия и небольшим процентом азота, такое как «Здравень Турбо для цветников и клумб» (NPK=8:15:18 + магний и микроэлементы). Многолетняя гвоздика даёт обильный самосев, поэтому после окончания цветения необходимо срезать все цветоносы. Их удаляют не под корень, а на пенёк, оставляя побеги высотой 7-10 см. После обрезки растение обильно проливают и подкармливают. Очень скоро кустики обрастают новой зеленью и выглядят декоративно до конца сезона.</string>
    <string name="dianthus_text_transfer">Для пересадки садовой гвоздики в открытый грунт нужно выбрать тёплое светлое место с хорошо дренированным грунтом.</string>
    <string name="petunia_text_light">Это теплолюбивые и солнцелюбивые растения, поэтому для них необходимо предусмотреть полностью солнечное положение, иначе они вытянутся, поблекнут, дадут намного меньше цветов. Идеально выращивать петунии в местах с южной или юго-западной экспозицией. На балконе и клумбе стоит позаботиться о защите от ветра, способного повредить цветы.</string>
    <string name="petunia_text_watering">Она засухоусточива, но в жару требуется полив. Причем, крупноцветковые петунии более нуждаются в поливе, чем мелкоцветковые. Поливать нужно строго под корень. Чтобы не рыхлить почву после каждого полива, рекомендуется ее замульчировать.</string>
</resources>