<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Plants.Cereus">
    <LinearLayout
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white1">


        <ImageView
            android:id="@+id/back_st"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"

            app:srcCompat="@drawable/st" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:textSize="25dp"
            android:text="Назад"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/cereus_cactus"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_below="@id/name"
        app:srcCompat="@drawable/cereus" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_below="@id/back"
        android:textSize="30dp"
        android:layout_marginStart="140dp"
        android:text="@string/cereus"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="290dp"
        android:layout_below="@id/cereus_cactus">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cereus_cactus"
                android:layout_marginVertical="10dp"
                android:textSize="30dp"
                android:text="@string/light" />

            <TextView
                android:id="@+id/light_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:layout_below="@id/light"
                android:text="@string/cereus_text_light"
                />
        </LinearLayout>
    </ScrollView>



    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="150dp"
        android:onClick="add_element"
        android:text="Добавить" />


</RelativeLayout>